# cspice-meson-cyice-test

./: .gitignore  README.md  c_files.txt  h_files.txt  meson.build  meson.build-complete  meson_options.txt  pyproject.toml  test_cspice.c
.github/workflows/: build.yml
cross/: cygwin-x86_64.txt  macos-aarch64.txt  macos-arm.txt  macos-x86_64.txt  windows-aarch64.txt
src/test_cyice/: meson.build  test_cyice.pxd  test_cyice.pyx
src/test_cyice/utils/: meson.build
subprojects/: cspice.def  libcspice-cygwin-x64.wrap  libcspice-linux-arm.wrap  libcspice-linux-x64.wrap  libcspice-macos-arm.wrap  libcspice-macos-x64.wrap  libcspice-macos.wrap  libcspice-windows-x64.wrap  meson-build.patch
subprojects/packagefiles/: cspice-def-dos.patch  cspice-def-unix.patch  cspice-def.patch  isatty.patch  meson-build.patch  meson-options.patch  mktemp.patch
