[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'setuptools>=76.0.0', 'wheel', 'numpy>=2.0.0', 'cython']


[project]
name = 'test_cyice'
version = '0.0.1'
description = 'Test Cyice, using meson-python!'
readme = 'README.md'
requires-python = '>=3.11'
license = {file = 'LICENSE'}
authors = [
  {name = 'Andrew Annex', email = 'andrew.annex@gmail.com'},
]

[tool.meson-python]
allow-windows-internal-shared-libs = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = [ '*.so', '*.dylib']
test_cyice = [ '*.so', '*.dylib']